Bug 85473 - knode doesn't convert charset for XOVER command
Summary: knode doesn't convert charset for XOVER command
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.7.7
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-07-19 13:23 UTC by Alexander Buloichik
Modified: 2009-05-10 20:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Buloichik 2004-07-19 13:23:09 UTC
Version:           0.7.7 (using KDE 3.2.3,  (testing/unstable))
Compiler:          gcc version 3.3.3 (Debian 20040422)
OS:                Linux (i686) release 2.6.7mono

I have sn newsserver, messages with koi8-r charset in new server, and ru_RU.UTF-8 locale in KDE.

When knode retrieves message list for newsgroup, it sends XOVER command to the nntp server. NNTP server retrieves list of messages in stored encoding(koi8-r), and knode displays they without convert charset, then I see incorrect subjects in message list.

When I see View/Encoding/koi8-r, instead View/Encoding/Auto, then subjects display incorrectly, but when I click on subject, then it displays in correctly encoding.

View/Encoding settings doesn't stored for next run of knode.
Comment 1 Olivier Trichet 2009-05-10 20:17:30 UTC
SVN commit 966237 by otrichet:

Try to properly decode 8bit string coming from XOVER listing

 - Use the default charset of the group (or the global posting charset
   -- need to add a global default reading charset --) to decode 8bit
   data (From and Subject). This restore the behaviour from KDE3
 - The from and subject line in the message view should also be fine
   when the message is not what we usually expect.

This needs that either the global charset or the charset of the group to
be defined to the local legacy encoding to do something usefull.
Viva UTF-8.

BUG: 85473
BUG: 114898
BUG: 179703
BUG: 188783
BUG: 114199
BUG: 163114

 M  +12 -2     knarticle.cpp  
 M  +16 -8     kngroup.cpp  
 M  +34 -2     utils/locale.cpp  
 M  +34 -3     utils/locale.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=966237