Try to properly decode 8bit string coming from XOVER listing

- Use the default charset of the group (or the global posting charset
   -- need to add a global default reading charset --) to decode 8bit
   data (From and Subject). This restore the behaviour from KDE3
 - The from and subject line in the message view should also be fine
   when the message is not what we usually expect.

This needs that either the global charset or the charset of the group to
be defined to the local legacy encoding to do something usefull.
Viva UTF-8.

BUG: 85473
BUG: 114898
BUG: 179703
BUG: 188783
BUG: 114199
BUG: 163114

svn path=/trunk/KDE/kdepim/knode/; revision=966237