knode/utils/locale.h
@@ -30,20 +30,29 @@ class QByteArray;
 class QString;
 
 namespace KNode {
+
+/**
+  Namespace for utilitary classes.
+*/
 namespace Utilities {
 
 /**
   @brief A set of utilitary methods that deals with character sets.
 
-  Those methods allow that only legal (as in MIME) charsets are used in headers of
-  messages that are @em sent (not encoding name coming from KCharsets).
+  Those methods allow:
 
+  @li that only legal (as in MIME) charsets are used in headers of
+  messages that are @em sent (not encoding name coming from KCharsets).
   @par
   See bug #169411, #163524 among other issues for the rational behind this class.
+
+  @li or that recode 8bit strings to a hopefully proper encoding. This is used for incoming
+  messages, specially for data from XOVER call.
 */
 class KNODE_EXPORT Locale {
 
   public:
+    // Methods to cleanup charset of out-going message
     /**
       Converts a given charset to a charset that can be used in message headers (e.g. in charset field of a
       Content-Type, or in encoding for From and Subject field).
@@ -70,6 +79,28 @@ class KNODE_EXPORT Locale {
       This calls defaultCharset() if no default charset is configured for this group.
     */
     static QByteArray defaultCharset( KNGroup *g );
+
+
+    // Incoming data
+    /**
+      Try to convert a 8bits string to the equivalent 7bits RFC-2047 string.
+      @param s a string that contains either a properly RFC2047-encoded string, or
+               a 8bits bytearray read as a ISO-8859-1 string.
+      @param g group associated with the input string @p s. used to get a charset to
+               try the recoding.
+      @param result a bytearray filled with the 7bits equivalent of @p s encoded as defined in RFC-2047.
+    */
+    static void recodeString( const QString &s, KNGroup *g, QByteArray &result );
+
+    /**
+      Convert raw data @p raw to a RFC-2047 string.
+      @param raw a raw string that is assume to be encoded with @p charset.
+      @param charset the charset to read from @p raw.
+      @param result a bytearray filled with the equivalent of @p raw as a RFC-2047 string or @p raw
+              if it was already correctly encoded.
+    */
+    static void encodeTo7Bit( const QByteArray &raw, const QByteArray &charset, QByteArray &result );
+
 };
 
 } // namespace Utilities
